# Optimal_Strategies_in_RCV

./: .gitignore  CITATION.cff  CLAUDE.md  LICENSE  Main.py  PAPER_REPRODUCTION_GUIDE.md  RCV_main.ipynb  README.md  STVandIRV_results.py  alaska.py  analyze_heatmap.py  analyze_high_candidate_elections.py  candidate_removal.py  case_study_helpers.py  comparable_margins_2017_vs_2021.xlsx  comparable_margins_2017_vs_2021_sorted.xlsx  create_probability_table.py  debug_alaska.py  detailed_analysis.py  poll_data.csv  portland_exhaust_strategy_analysis.py  portland_single_choice.py  pyproject.toml  requirements.txt  requirements_deploy.txt  run_republican_primary.py  strategy_optimization.py  stv_all_scenarios.xlsx  summary_table.xlsx  summary_table_10_NYC.xlsx  summary_table_30_nyc.xlsx  summary_table_NYC.xlsx  summary_table_alaska_15.xlsx  summary_table_alaska_40.xlsx  summary_table_alska_final.xlsx  summary_table_alska_lite.xlsx  summary_table_nyc_40.xlsx  summary_table_nyc_40_heavy_cands.xlsx  summary_table_nyc_final.xlsx  summary_table_nyc_lite.xlsx  (+2 more)
.streamlit/: config.toml
Portland City Council Data and Analysis/: Election_results_dis1.csv  Election_results_dis4.csv
ballot_exhastion/: alaska_analysis.csv  nyc_analysis.csv  rcv_analysis_focused.py  rcv_comprehensive_analysis.py  simple_rcv_analysis_focused.py
ballot_exhaustion/: plot_bayesian_models.py  plot_nyc_models_vs_ratio_updated.py  probability_models.py
cleaned_files/: NYC_13_Council_District.csv  NYC_DEM_13_Council_District.csv
docs/: CODE_REVIEW_PLAN.md
primary_final_results/: iteration_15.json  (+22 more)
(+2545 files in other folders)
