[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "rcv-strategies"
dynamic = ["version"]
description = "Optimal vote-addition strategies for Ranked Choice Voting elections"
readme = "README.md"
license = "MIT"
requires-python = ">=3.8"
authors = [
    {name = "Sanyukta Deshpande"},
]
dependencies = [
    "numpy>=1.21.0",
    "pandas>=1.3.0",
    "scipy>=1.7.0",
    "matplotlib>=3.4.0",
    "seaborn>=0.11.0",
    "openpyxl>=3.0.0",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering",
]

[project.urls]
Homepage = "https://github.com/sanyukta-D/Optimal_Strategies_in_RCV"
"Web App" = "https://rcv-analyzer.streamlit.app/"

[tool.setuptools.dynamic]
version = {attr = "rcv_strategies.__version__"}

[tool.setuptools.packages.find]
include = ["rcv_strategies*"]
